--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    tools:context=".splashscree">
+    tools:context=".splashscreen">
 
     <ImageView
         android:id="@+id/imageView"
@@ -16,11 +16,11 @@
         android:layout_marginEnd="94dp"
         android:layout_marginBottom="349dp"
         app:layout_constraintBottom_toBottomOf="parent"
-         android:src="@drawable/splashlogo"
+        android:src="@drawable/splash_logo"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="ContentDescription,MissingConstraints" />
 
     <TextView
         android:id="@+id/textView"
@@ -28,10 +28,10 @@
         android:layout_height="74dp"
         android:layout_marginTop="13dp"
         android:layout_marginBottom="181dp"
-        android:text="Sportify"
+        android:text="@string/app_name"
         android:textAlignment="center"
         android:textColor="@color/purple_700"
-        android:textSize="30dp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -45,20 +45,21 @@
         android:gravity="center"
         android:text="From"
         android:textColor="@color/black"
-        android:textSize="12dp"
+        android:textSize="12sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.819" />
+        app:layout_constraintVertical_bias="0.819"
+        tools:ignore="HardcodedText" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Chameli Devi Group Of Institution"
+        android:text="@string/clg_name"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -66,7 +67,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:textColor="@color/black"
         android:gravity="center"
-        android:textSize="20dp"
+        android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintVertical_bias="0.869" />
 </androidx.constraintlayout.widget.ConstraintLayout>
