Created Object files

--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,4 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <!-- Menu items -->
+    <item
+        android:id="@+id/nav_item1"
+        android:title="Item 1"/>
+
+    <item
+        android:id="@+id/nav_item2"
+        android:title="Item 2"/>
+
+    <item
+        android:id="@+id/nav_item3"
+        android:title="Item 3"/>
+
+    <item
+        android:id="@+id/nav_item4"
+        android:title="Item 4"/>
+    <item
+        android:id="@+id/nav_item5"
+        android:title="Item 5"/>
+
+    <item
+        android:id="@+id/nav_item6"
+        android:title="Item 6"/>
+
+
+    <!-- Add more items as needed -->
+
 </menu>
